# ai-knowledge-promoter

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
.claude/skills/runme-conventions/: SKILL.md
.claude/skills/runme-conventions/references/: cell-options.md
.claude/skills/using-vertical-tdd/: SKILL.md
.claude/skills/using-vertical-tdd/templates/: coverage-template.md  tech-spike-template.md  verify-template.md
.claude/skills/using-vertical-tdd/workflows/: commit-strategy.md  coverage-check.md  step0-proposal.md  step0.5-tech-spike.md  step0.9-design.md  (+12 more)
.claude/skills/verify-and-coverage/: SKILL.md
docs/: roadmap.md
infra/: README.md
mcp-server/: README.md  pyproject.toml
mcp-server/scripts/: create_collection.py
mcp-server/src/mcp_server/: main.py
mcp-server/src/mcp_server/domain/: models.py  repositories.py
mcp-server/src/mcp_server/infrastructure/: archive_repository.py  vector_search.py
mcp-server/src/mcp_server/tools/: __init__.py  promote_knowledge.py  save_knowledge.py  search_knowledge.py
mcp-server/tests/: test_archive_repository.py  test_models.py  test_promote_knowledge.py  test_vector_search_repository.py
openspec/: project.md
openspec/changes/add-firestore-persistence/: design.md  proposal.md  tasks.md
openspec/changes/add-knowledge-mcp-skeleton/: README.md  design.md  tasks.md  verify.md
openspec/changes/add-promote-and-archive/: tasks.md  verify.md
openspec/changes/add-vector-search-persistence/: design.md  proposal.md  tasks.md  verify.md
openspec/specs/knowledge-gateway/: coverage.md  spec.md
(+8 files in other folders)
