[project]
name = "knowledge-mcp-server"
version = "0.1.0"
description = "Knowledge sharing MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]
